--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -504,7 +504,7 @@ img.portfolio_images {
 	}
 	
 	.port-heading{
-		font-size:13pt; 
+		font-size:11pt; 
 		font-weight: bold; 
 		text-align: left; 
 		font-family: 'Lato', sans-serif; 
@@ -512,7 +512,7 @@ img.portfolio_images {
 	}
 	
 	 .sub-port-heading {
-		font-size:11pt; 
+		font-size:9pt; 
 		font-weight: normal;
 		text-align: left;
 		font-family: 'Lato', sans-serif; 
@@ -637,9 +637,15 @@ img.portfolio_images {
    font-size: 7vw;
 	  bottom: 2%;
 	  z-index: 9999;
-  }
+	  animation: fadeInhome 5s;
+	}
 
+	@keyframes fadeInhome {
+  0% { opacity: 0; }
+	90% { opacity: 0; }
 
+  100% { opacity: .6; }
+}
 
   .carolcarolcon{
       width: 100vw;
