--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -11,15 +11,26 @@ img.portfolio_images {
 	display: none;
 }	
 
-#test {
-    width: 500px;
-    height: 500px;
-    background-color: lightblue;
+
+.headermred {
+	display: block;
 }
+
+
+
+.hamburger-menu{
+	display: block;
+}
+
 
 /*labtop*/
 @media (max-width:5480px){
 
+.hamburger-menu{
+	display: none;
+}	
+	
+	
   .container_one.intro{
 	  width: 100vw;
 	  height: 100vh;
@@ -343,6 +354,9 @@ img.portfolio_images {
 
 @media (max-width:2024px){
 
+	.hamburger-menu{
+	display: none;
+}
 
 	.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
 		width: 50%; max-width: 50%;
@@ -466,8 +480,11 @@ img.portfolio_images {
 
 @media (max-width:1200px){
 	
+	
+
+	
 		.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
-{width: 90%; max-width: 90%;}
+{width: 50%; max-width: 50%;}
 
 	  .carousel-inner{
     height: 120vh;
@@ -492,6 +509,12 @@ img.portfolio_images {
 			z-index: 2000;
 			display: none;
 	}
+	
+	
+	.headermred {
+	display: none;
+}
+	
 
 }
 
@@ -502,7 +525,7 @@ img.portfolio_images {
 
 @media (max-width:830px){
 	
-	
+
 	.port-heading{
 		font-size:11pt; 
 		font-weight: bold; 
@@ -652,6 +675,7 @@ img.portfolio_images {
       height: 100vh;
       /*overflow: hidden;*/
   }
+	
 
 }
 
@@ -952,11 +976,23 @@ h4.email a{
 	/*transition: all .1s ease-in-out;*/
   }	
 	
+	
+	  .totop{
+   letter-spacing: .3;
+	display: inherit;
+   font-weight: bold;
+	  margin: inherit;
+   font-size: 5vw;
+	  bottom: 1%;
+	  z-index: 8888;
+	  animation: fadeInhome 5s;
+	}
 
 .container_one.contactpage{
     overflow: hidden;
     display: block;
 	height: 55vh;
+	display: none;
   }	
 	
   .container_two.contact{
