mobile coding2nav, coffee and CV fixed

--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -689,9 +689,8 @@ img.portfolio_images {
 	
 	
 	.container_carousel{
-		height: 100vh;
+		height: auto;
 	}
-	
 
   .container_one.intro{
 	width: 100vw;
