--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -34,11 +34,11 @@ img.portfolio_images {
 	
 	
 	.madnessvideobasketball.postit {
-		width: 28%;
+		width: 30%;
 		height: auto;
 		position: absolute;
-		right: -17%;
-		bottom: 8vh;
+		right: -23%;
+		bottom: 8%;
 	}
 	
 	
